--- a/style.css
+++ b/style.css
@@ -23,3 +23,16 @@ body {
     stroke-width: 2;
     transition: .1s;
 }
+
+.tooltip {
+    background: rgba(255,255,255,.75);
+    padding: 5px;
+}
+
+.bar {
+  fill: steelblue;
+}
+
+.bar:hover {
+  fill: brown;
+}
